# glm-plan-cli

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  glm-config.example.yaml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/001-glm-cli-command/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-glm-cli-command/checklists/: requirements.md
specs/001-glm-cli-command/contracts/: api.md
src/: config.rs  error.rs  lib.rs  main.rs
src/api/: client.rs  mod.rs  types.rs
src/output/: mod.rs  table.rs
